[gd_scene load_steps=12 format=3 uid="uid://qu3wxx3iydx7"]

[ext_resource type="FontFile" uid="uid://eiw8wgpdg0j3" path="res://Assets/Fonts/8BITv6.ttf" id="1_8ekwj"]
[ext_resource type="Script" path="res://Scripts/main_menu_ui.gd" id="1_li6fe"]
[ext_resource type="Texture2D" uid="uid://c8o1m30fx48kq" path="res://main-menu_sheet.png" id="2_pca38"]

[sub_resource type="Animation" id="Animation_e0w7r"]
resource_name = "menu"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_ct37l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vdyi0"]
_data = {
"RESET": SubResource("Animation_ct37l"),
"menu": SubResource("Animation_e0w7r")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bo0np"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ttv8q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rsuyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2r7gn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5elo4"]

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_li6fe")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(7.21111, 7.21111)
texture = ExtResource("2_pca38")
offset = Vector2(80, 45)
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_vdyi0")
}
autoplay = "menu"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -138.0
offset_right = 204.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.933333, 0.941176, 0.752941, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.0823529, 0.0862745, 1)
theme_override_constants/outline_size = 10
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("1_8ekwj")
theme_override_font_sizes/font_size = 25
text = "A GAME BY:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -402.0
offset_top = -90.0
offset_right = 418.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.933333, 0.941176, 0.752941, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.0823529, 0.0862745, 1)
theme_override_constants/outline_size = 10
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("1_8ekwj")
theme_override_font_sizes/font_size = 20
text = "OFFICIALCHASER, GOBBE, CRAZEDPIANIST
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -610.0
offset_top = -491.0
offset_right = -220.0
offset_bottom = -364.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.933333, 0.941176, 0.752941, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.0823529, 0.0862745, 1)
theme_override_constants/outline_size = 10
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("1_8ekwj")
theme_override_font_sizes/font_size = 25
text = "INSTRUCTIONS
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -563.0
offset_top = -387.0
offset_right = -173.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.933333, 0.941176, 0.752941, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.0823529, 0.0862745, 1)
theme_override_constants/outline_size = 10
theme_override_constants/line_spacing = 9
theme_override_fonts/font = ExtResource("1_8ekwj")
theme_override_font_sizes/font_size = 20
text = "LMB TO SHOOT

RMB TO SWITCH SPELL

R TO RELOAD

USING SPELLS 
COSTS MANA

DON'T FALL IN THE PITS
KILL ENEMIES
AND SURVIVE
"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -68.0
offset_right = 186.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(186, 30)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bo0np")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ttv8q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rsuyf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2r7gn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5elo4")

[node name="StartButtonLabel" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -25.0
offset_right = 195.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(195, 25)
theme_override_colors/font_color = Color(0.933333, 0.941176, 0.752941, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.0823529, 0.0862745, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_8ekwj")
theme_override_font_sizes/font_size = 50
text = "- Start -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = 23.0
offset_right = 186.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(186, 30)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bo0np")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ttv8q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rsuyf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2r7gn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5elo4")

[node name="StartButtonLabel" type="Label" parent="StartButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -25.0
offset_right = 195.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(195, 25)
theme_override_colors/font_color = Color(0.933333, 0.941176, 0.752941, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.0823529, 0.0862745, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_8ekwj")
theme_override_font_sizes/font_size = 50
text = "- HELP -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = 117.0
offset_right = 186.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(186, 30)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bo0np")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ttv8q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rsuyf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2r7gn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5elo4")

[node name="StartButtonLabel" type="Label" parent="StartButton3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -25.0
offset_right = 195.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(195, 25)
theme_override_colors/font_color = Color(0.933333, 0.941176, 0.752941, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.0823529, 0.0862745, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_8ekwj")
theme_override_font_sizes/font_size = 50
text = "- Quit -"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_down"]
[connection signal="button_up" from="StartButton" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="mouse_exited" from="StartButton/StartButtonLabel" to="." method="_on_start_button_label_mouse_exited"]
[connection signal="mouse_exited" from="StartButton2/StartButtonLabel" to="." method="_on_start_button_label_mouse_exited"]
[connection signal="mouse_exited" from="StartButton3/StartButtonLabel" to="." method="_on_start_button_label_mouse_exited"]
